edition = "2023";

package hestia.jobfair.identity.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "google/type/date.proto";
import "hestia/jobfair/common/v1/common.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "hestia/jobfair/api/pb/identity";

service IdentityManagementService {
  rpc Login(LoginRequest) returns (hestia.jobfair.common.v1.Token);
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
  rpc Alive(hestia.jobfair.common.v1.Token) returns (google.protobuf.Empty);
  rpc Logout(hestia.jobfair.common.v1.Token) returns (google.protobuf.Empty);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  User user = 1;
  string password = 2 [features.field_presence = IMPLICIT];
  Education education = 3;
}

service UserManagement {
  rpc GetUsers(google.protobuf.Empty) returns (UserList);
  rpc GetUser(hestia.jobfair.common.v1.TimePagination) returns (User);
  rpc SearchUsers(SearchUsersRequest) returns (UserList);
  rpc UpdateUser(User) returns (google.protobuf.Empty);
  rpc DeleteUser(hestia.jobfair.common.v1.Id) returns (google.protobuf.Empty);
  rpc AddExperience(Experience) returns (google.protobuf.Empty);
  rpc AddEducation(Education) returns (google.protobuf.Empty);
  rpc GetExperiences(hestia.jobfair.common.v1.Id) returns (ExperienceList);
  rpc GetEducations(hestia.jobfair.common.v1.Id) returns (EducationList);
  rpc DeleteExperience(hestia.jobfair.common.v1.Id) returns (google.protobuf.Empty);
  rpc DeleteEducation(hestia.jobfair.common.v1.Id) returns (google.protobuf.Empty);
}

message User {
  string name = 1;
  string email = 2;
  string photo = 3 [features.field_presence = EXPLICIT];
  string description = 4 [features.field_presence = EXPLICIT];
  repeated hestia.jobfair.common.v1.Interest interests = 5;
  repeated hestia.jobfair.common.v1.ContractType contractTypes = 6;
}

message Education {
  string school = 1;
  string degree = 2;
  bool alumni = 3;
  // if year is set then its the current education
  int32 year = 4;
  google.type.Date start_date = 5 [features.field_presence = EXPLICIT];
  google.type.Date end_date = 6 [features.field_presence = EXPLICIT];
  string info = 7 [features.field_presence = EXPLICIT];
}

message Experience {
  string company = 1;
  string position = 2;
  google.type.Date start_date = 3 [features.field_presence = EXPLICIT];
  google.type.Date end_date = 4 [features.field_presence = EXPLICIT];
  string info = 5 [features.field_presence = EXPLICIT];
}

// Automatically limited to 20
message SearchUsersRequest {
  string name = 1 [features.field_presence = EXPLICIT];
  string email = 2 [features.field_presence = EXPLICIT];
}

message UserList {
  hestia.jobfair.common.v1.TimePagination pagination = 1;
  repeated User users = 2;
}

message ExperienceList {
  repeated Experience experiences = 1;
}

message EducationList {
  repeated Education educations = 1;
}
